--- a/juegos.html
+++ b/juegos.html
@@ -3,13 +3,13 @@
 <html lang="es">
 <head>
     <meta name="author" content="Iván García García" />
-    <meta name="description" content="Página principal de F1 Desktop" />
-    <meta name="keywords" content="F1,noticias,novedades" />
+    <meta name="description" content="Juegos" />
+    <meta name="keywords" content="F1,juegos" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Datos que describen el documento -->
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <meta charset="UTF-8" />
-    <title>F1 Desktop</title>
+    <title>F1 Desktop: Juegos</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <a href="viajes.html">Viajes</a>
         <a href="juegos.html">Juegos</a>
     </nav>
-    <h2>Inicio</h2>
+    <h2>Juegos</h2>
     <p>En desarrollo</p>
 </body>
 </html>
