--- a/juegos.html
+++ b/juegos.html
@@ -7,24 +7,30 @@
     <meta name="keywords" content="F1,juegos" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Datos que describen el documento -->
+    <link rel="icon" href="multimedia/imagenes/icono.ico" sizes="48x48" 
+        type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <meta charset="UTF-8" />
     <title>F1 Desktop: Juegos</title>
 </head>
 
 <body>
-    <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>F1 Desktop</h1>
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="piloto.html">Piloto</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="calendario.html">Calendario</a>
-        <a href="meteorologia.html">Meteorología</a>
-        <a href="circuito.html">Circuito</a>
-        <a href="viajes.html">Viajes</a>
-        <a href="juegos.html">Juegos</a>
-    </nav>
+    <header>
+        <!-- Datos con el contenidos que aparece en el navegador -->
+        <h1><a title="Inicio" href="index.html">F1 Desktop</a></h1>
+        <nav>
+            <a title="Inicio" href="index.html">Inicio</a>
+            <a title="Piloto" href="piloto.html">Piloto</a>
+            <a title="Notocias" href="noticias.html">Noticias</a>
+            <a title="Calendario" href="calendario.html">Calendario</a>
+            <a title="Meteorología" href="meteorologia.html">Meteorología</a>
+            <a title="Circuito" href="circuito.html">Circuito</a>
+            <a title="Viajes" href="viajes.html">Viajes</a>
+            <a title="Juegos" class="active" href="juegos.html">Juegos</a>
+        </nav>
+    </header>
+    <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Juegos </p>
     <h2>Juegos</h2>
     <p>En desarrollo</p>
 </body>
