--- a/piloto.html
+++ b/piloto.html
@@ -7,26 +7,33 @@
     <meta name="keywords" content="F1,piloto,George Russell,Mercedes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Datos que describen el documento -->
+    <link rel="icon" href="multimedia/imagenes/icono.ico" sizes="48x48" 
+        type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <meta charset="UTF-8" />
     <title>F1 Desktop: Piloto</title>
 </head>
 
 <body>
+    <header>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>F1 Desktop</h1>
+    <h1><a title="Inicio" href="index.html">F1 Desktop</a></h1>
     <nav>
-        <a href="index.html">Inicio</a>
-        <a href="piloto.html">Piloto</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="calendario.html">Calendario</a>
-        <a href="meteorologia.html">Meteorología</a>
-        <a href="circuito.html">Circuito</a>
-        <a href="viajes.html">Viajes</a>
-        <a href="juegos.html">Juegos</a>
+        <a title="Inicio" href="index.html">Inicio</a>
+        <a title="Piloto" class="active" href="piloto.html">Piloto</a>
+        <a title="Notocias" href="noticias.html">Noticias</a>
+        <a title="Calendario" href="calendario.html">Calendario</a>
+        <a title="Meteorología" href="meteorologia.html">Meteorología</a>
+        <a title="Circuito" href="circuito.html">Circuito</a>
+        <a title="Viajes" href="viajes.html">Viajes</a>
+        <a title="Juegos" href="juegos.html">Juegos</a>
     </nav>
+    </header>
+    <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Piloto </p>
+    <main>
     <h2>George Russell</h2>
-    <p>En desarrollo</p>
+    <section>
     <h3>Datos personales</h3>
     <h4>Nombre</h4>
     <p>George Russell</p>
@@ -54,18 +61,17 @@
         <li>Williams</li>
         <li>Mercedes</li>
     </ul>
+    <picture>
+        <source media="(max-width: 465px)"
+            srcset="multimedia/imagenes/piloto_s.png">
+        <source media="(max-width: 799px)"
+            srcset="multimedia/imagenes/piloto.png">
+        <source media="(min-width: 800px)"
+            srcset="multimedia/imagenes/piloto_xl.png">
+        <img src="multimedia/imagenes/piloto.png" alt="foto de Geprge Russell"/>
+    </picture>
+</section>
     
-    <h3>Conceptos</h3>
-    <dl>
-        <dt>Pit Stop</dt>
-        <dd>Parada que realiza un vehiculo durante la carrera para repostar, cambiar neumáticos, hacer reparaciones o cambiar de piloto</dd>
-        <dt>Pole</dt>
-        <dd>Primer lugar de la parrilla de salida</dd>
-        <dt>Rake</dt>
-        <dd>Inclinación del coche respecto al suelo</dd>
-        <dt>Efecto Suelo</dt>
-        <dd>Efecto que surge cuando se conduce el aire por debajo del coche que genera un vacio y empuja el coche hacia el suelo</dd>
-    </dl>
     <h3>Resultados</h3>
     <ol>
         <li>2021
@@ -96,24 +102,28 @@
     <table>
         <caption>Resultados 2023</caption>
         <tr>
-            <td>Puntos</td>
-            <th>175</th>
+            <th></th>
+            <th scope="col" id="resultados">Resultados</th>
         </tr>
         <tr>
-            <td>Posición</td>
-            <th>8º</th>
+            <th scope="row" id="puntos">Puntos</th>
+            <td headers="puntos resultados">175</td>
         </tr>
         <tr>
-            <td>Poles</td>
-            <th>0</th>
+            <th scope="row" id="posicion">Posición</th>
+            <td headers="posicion resultados">8º</td>
         </tr>
         <tr>
-            <td>Victorias</td>
-            <th>0</th>
+            <th scope="row" id="poles">Poles</th>
+            <td headers="poles resultados">0</td>
         </tr>
         <tr>
-            <td>Podios</td>
-            <th>2</th>
+            <th scope="row" id="victorias">Victorias</th>
+            <td headers="victorias resultados">0</td>
+        </tr>
+        <tr>
+            <th scope="row" id="podios">Podios</th>
+            <td headers="podios resultados">2</td>
         </tr>
     </table>
 
@@ -121,18 +131,9 @@
     <a href="https://www.formula1.com/en/drivers/george-russell">Página de la Fórmula 1</a>
     <a href="https://es.wikipedia.org/wiki/George_Russell_(piloto)">Wikipedia</a>
     <p></p>
-
-    <picture>
-        <source media="(max-width: 465px)"
-            srcset="multimedia/imagenes/piloto_s.png">
-        <source media="(max-width: 799px)"
-            srcset="multimedia/imagenes/piloto.png">
-        <source media="(min-width: 800px)"
-            srcset="multimedia/imagenes/piloto_xl.png">
-        <img src="multimedia/imagenes/piloto.png" alt="foto de Geprge Russell"/>
-    </picture>
-    <p></p>
     <video controls preload="auto">
+        <source src="multimedia/videos/piloto.webm"
+        type="video/webm" />
         <source src="multimedia/videos/piloto.mp4"
         type="video/mp4" />
     </video>
@@ -141,6 +142,23 @@
     <audio controls>
         <source src="multimedia/audio/piloto.mp3"
             type="audio/mpeg"/>
+        <source src="multimedia/audio/piloto.wav"
+            type="audio/wav"/>
     </audio>
+    </main>
+
+    <aside>
+        <h3>Conceptos</h3>
+        <dl>
+            <dt>Pit Stop</dt>
+            <dd>Parada que realiza un vehiculo durante la carrera para repostar, cambiar neumáticos, hacer reparaciones o cambiar de piloto</dd>
+            <dt>Pole</dt>
+            <dd>Primer lugar de la parrilla de salida</dd>
+            <dt>Rake</dt>
+            <dd>Inclinación del coche respecto al suelo</dd>
+            <dt>Efecto Suelo</dt>
+            <dd>Efecto que surge cuando se conduce el aire por debajo del coche que genera un vacio y empuja el coche hacia el suelo</dd>
+        </dl>
+    </aside>
 </body>
 </html>
