--- a/memoria.html
+++ b/memoria.html
@@ -3,16 +3,18 @@
 <html lang="es">
 <head>
     <meta name="author" content="Iván García García" />
-    <meta name="description" content="Juegos" />
-    <meta name="keywords" content="F1,juegos" />
+    <meta name="description" content="Juego de Memoria" />
+    <meta name="keywords" content="F1,juegos, memoria" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Datos que describen el documento -->
     <link rel="icon" href="multimedia/imagenes/icono.ico" sizes="48x48" 
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/memoria.css" />
     <meta charset="UTF-8" />
-    <title>F1 Desktop: Juegos</title>
+    <script src="js/memoria.js"></script>
+    <title>F1 Desktop: Memoria</title>
 </head>
 
 <body>
@@ -30,11 +32,17 @@
             <a title="Juegos" class="active" href="juegos.html">Juegos</a>
         </nav>
     </header>
-    <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Juegos </p>
-    <h2>Juegos</h2>
+    <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | <a title="Juegos" href="juegos.html">Juegos</a>  | Memoria</p>
     <nav>
         <a title="Memoria" href="memoria.html">Memoria</a>
         <a title="Semáforo" href="semaforo.php">Semáforo</a>
     </nav>
+    <button onclick="alert('Pulse en las tarjetas para darles la vuelta. Si las imagnes de dos cartas coinciden quedarán dadas la vuelta. Continue hasta que todas estén dadas la vuelta.')">Ayuda</button>
+    <section>
+        <h2>Juego de Memoria</h2>
+        <script>
+            var memoria=new Memoria();
+        </script>
+    </section>
 </body>
 </html>
