--- a/piloto.html
+++ b/piloto.html
@@ -26,7 +26,7 @@
         <a title="Calendario" href="calendario.html">Calendario</a>
         <a title="Meteorología" href="meteorologia.html">Meteorología</a>
         <a title="Circuito" href="circuito.html">Circuito</a>
-        <a title="Viajes" href="viajes.html">Viajes</a>
+        <a title="Viajes" href="viajes.php">Viajes</a>
         <a title="Juegos" href="juegos.html">Juegos</a>
     </nav>
     </header>
