--- a/calendario.html
+++ b/calendario.html
@@ -11,7 +11,11 @@
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/agenda_grid.css" />
     <meta charset="UTF-8" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/agenda.js"></script>
     <title>F1 Desktop: Calendario</title>
 </head>
 
@@ -32,6 +36,8 @@
         </header>
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Calendario </p>
     <h2>Calendario</h2>
-    <p>En desarrollo</p>
+
+    <button onclick="agenda.mostrarCarreras()">Mostrar Carreras</button>
+
 </body>
 </html>
