--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 
 <html lang="es">
+
 <head>
     <meta name="author" content="Iván García García" />
     <meta name="description" content="Página principal de F1 Desktop" />
     <meta name="keywords" content="F1,noticias,novedades" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Datos que describen el documento -->
-    <link rel="icon" href="multimedia/imagenes/icono.ico" sizes="48x48" 
-        type="image/vnd.microsoft.icon">
+    <link rel="icon" href="multimedia/imagenes/icono.ico" sizes="48x48" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
     <meta charset="UTF-8" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/fondo.js"></script>
     <title>F1 Desktop</title>
 </head>
 
@@ -26,11 +29,16 @@
             <a title="Calendario" href="calendario.html">Calendario</a>
             <a title="Meteorología" href="meteorologia.html">Meteorología</a>
             <a title="Circuito" href="circuito.html">Circuito</a>
-            <a title="Viajes" href="viajes.html">Viajes</a>
+            <a title="Viajes" href="viajes.php">Viajes</a>
             <a title="Juegos" href="juegos.html">Juegos</a>
         </nav>
     </header>
     <h2>Inicio</h2>
     <p>En desarrollo</p>
+    <script>
+        var fondo=new Fondo("","","");
+        fondo.obtenerImagen();
+    </script>
 </body>
+
 </html>
