--- a/noticias.html
+++ b/noticias.html
@@ -11,7 +11,11 @@
         type="image/vnd.microsoft.icon">
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
     <link rel="stylesheet" type="text/css" href="estilo/layout.css" />
+    <link rel="stylesheet" type="text/css" href="estilo/article_elements.css" />
     <meta charset="UTF-8" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/noticias.js"></script>
     <title>F1 Desktop: Noticias</title>
 </head>
 
@@ -26,12 +30,26 @@
             <a title="Calendario" href="calendario.html">Calendario</a>
             <a title="Meteorología" href="meteorologia.html">Meteorología</a>
             <a title="Circuito" href="circuito.html">Circuito</a>
-            <a title="Viajes" href="viajes.html">Viajes</a>
+            <a title="Viajes" href="viajes.php">Viajes</a>
             <a title="Juegos" href="juegos.html">Juegos</a>
         </nav>
     </header>
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Noticias </p>
     <h2>Noticias</h2>
-    <p>En desarrollo</p>
+    <p>
+        <input  type="file" id="archivoTexto" onchange="new Noticias().readInputFile(this.files)"/>
+
+    </p>
+    <section></section>
+    <h3>Añadir Noticia</h3>
+    <p>
+        Título: <input type="text" id="titulo" name="titulo" required/>
+    </p>
+    <p>
+        Autor: <input type="text" id="autor" name="autor" required/>
+    </p>
+    <p>Contenido:</p>
+    <textarea id="texto" rows="5" cols="40"></textarea>
+    <p><input type="submit" value="Añadir" onclick="new Noticias().addNews()"></p>
 </body>
 </html>
