--- a/juegos.html
+++ b/juegos.html
@@ -32,9 +32,9 @@
     </header>
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Juegos </p>
     <h2>Juegos</h2>
-    <nav>
-        <a title="Memoria" href="memoria.html">Memoria</a>
-        <a title="Semáforo" href="semaforo.php">Semáforo</a>
-    </nav>
+    <ul>
+        <li><a title="Memoria" href="memoria.html">Memoria</a></li>
+        <li><a title="Semáforo" href="semaforo.php">Semáforo</a></li>
+    </ul>
 </body>
 </html>
