--- a/memoria.html
+++ b/memoria.html
@@ -37,7 +37,7 @@
         <li><a title="Memoria" href="memoria.html">Memoria</a></li>
         <li><a title="Semáforo" href="semaforo.php">Semáforo</a></li>
     </ul>
-    <button onclick="alert('Pulse en las tarjetas para darles la vuelta. Si las imagnes de dos cartas coinciden quedarán dadas la vuelta. Continue hasta que todas estén dadas la vuelta.')">Ayuda</button>
+    <button onclick="alert('Pulse en las tarjetas para darles la vuelta. Si las imágenes de dos cartas coinciden quedarán dadas la vuelta. Continue hasta que todas estén dadas la vuelta.')">Ayuda</button>
     <section>
         <h2>Juego de Memoria</h2>
         <script>
