--- a/juegos.html
+++ b/juegos.html
@@ -35,6 +35,7 @@
     <ul>
         <li><a title="Memoria" href="memoria.html">Memoria</a></li>
         <li><a title="Semáforo" href="semaforo.php">Semáforo</a></li>
+        <li><a title="Semáforo" href="libre.html">Libre</a></li>
     </ul>
 </body>
 </html>
