--- a/libre.html
+++ b/libre.html
@@ -43,14 +43,14 @@
     </ul>
     <canvas width="1000" height="100"></canvas>
     <article>
-        <section id="s_Nico_Hulkenberg" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/Nico_Hulkenberg.png"/></section>
-        <section id="s_Carlos_Sainz" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/Carlos_Sainz.png"/></section>
-        <section id="s_Fernando_Alonso" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/fernando-alonso-2024.png"/></section>
-        <section id="s_Franco_Colapinto" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/Franco_Colapinto.png"/></section>
-        <section id="s_George_Russell" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/George_Russell.png"/></section>
-        <section id="s_Kevin_Magnussen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/kevin-magnussen-2024.png"/></section>
-        <section id="s_Lando_Norris" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/lando-norris-04.png"/></section>
-        <section id="s_Max_Verstappen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)"><img src="multimedia/imagenes/max-verstappen.png"/></section>
+        <section id="s_Nico_Hulkenberg" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Nico Hulkenberg"><img src="multimedia/imagenes/Nico_Hulkenberg.png"/></section>
+        <section id="s_Carlos_Sainz" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Carlos Sainz"><img src="multimedia/imagenes/Carlos_Sainz.png"/></section>
+        <section id="s_Fernando_Alonso" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Fernando Alonso"><img src="multimedia/imagenes/fernando-alonso-2024.png"/></section>
+        <section id="s_Franco_Colapinto" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Franco Colapinto"><img src="multimedia/imagenes/Franco_Colapinto.png"/></section>
+        <section id="s_George_Russell" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="George Russell"><img src="multimedia/imagenes/George_Russell.png"/></section>
+        <section id="s_Kevin_Magnussen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Kevin Magnussen"><img src="multimedia/imagenes/kevin-magnussen-2024.png"/></section>
+        <section id="s_Lando_Norris" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Lando Norris"><img src="multimedia/imagenes/lando-norris-04.png"/></section>
+        <section id="s_Max_Verstappen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" alt="Max Verstappen"><img src="multimedia/imagenes/max-verstappen.png"/></section>
     </article>
     <article>
         <p id="Fernando_Alonso" draggable="true" ondragstart="dragstartHandler(event)">Fernando Alonso</p>
