--- a/libre.html
+++ b/libre.html
@@ -43,15 +43,16 @@
         <li><a title="Semáforo" href="libre.html">Libre</a></li>
     </ul>
     <canvas width="1000" height="100"></canvas>
+    <h3>Une Los Nombres</h3>
     <article>
-        <section id="s_Nico_Hulkenberg" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Nico_Hulkenberg.png" alt="foto de Nico Hulkenberg"/></section>
-        <section id="s_Carlos_Sainz" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Carlos_Sainz.png" alt="Carlos Sainz"/></section>
-        <section id="s_Fernando_Alonso" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/fernando-alonso-2024.png" alt="Fernando Alonso"/></section>
-        <section id="s_Franco_Colapinto" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Franco_Colapinto.png" alt="Franco Colapinto"/></section>
-        <section id="s_George_Russell" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/George_Russell.png" alt="George Russell"/></section>
-        <section id="s_Kevin_Magnussen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/kevin-magnussen-2024.png" alt="Kevin Magnussen"/></section>
-        <section id="s_Lando_Norris" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/lando-norris-04.png" alt="Lando Norris"/></section>
-        <section id="s_Max_Verstappen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/max-verstappen.png" alt="Max Verstappen"/></section>
+        <article id="s_Nico_Hulkenberg" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Nico_Hulkenberg.png" alt="foto de Nico Hulkenberg"/></article>
+        <article id="s_Carlos_Sainz" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Carlos_Sainz.png" alt="Carlos Sainz"/></article>
+        <article id="s_Fernando_Alonso" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/fernando-alonso-2024.png" alt="Fernando Alonso"/></article>
+        <article id="s_Franco_Colapinto" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/Franco_Colapinto.png" alt="Franco Colapinto"/></article>
+        <article id="s_George_Russell" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/George_Russell.png" alt="George Russell"/></article>
+        <article id="s_Kevin_Magnussen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/kevin-magnussen-2024.png" alt="Kevin Magnussen"/></article>
+        <article id="s_Lando_Norris" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/lando-norris-04.png" alt="Lando Norris"/></article>
+        <article id="s_Max_Verstappen" ondrop="dropHandler(event)" ondragover="dragoverHandler(event)" ><img src="multimedia/imagenes/max-verstappen.png" alt="Max Verstappen"/></article>
     </article>
     <article>
         <p id="Fernando_Alonso" draggable="true" ondragstart="dragstartHandler(event)">Fernando Alonso</p>
