--- a/memoria.html
+++ b/memoria.html
@@ -36,10 +36,12 @@
     <ul>
         <li><a title="Memoria" href="memoria.html">Memoria</a></li>
         <li><a title="Semáforo" href="semaforo.php">Semáforo</a></li>
+        <li><a title="Unión" href="union.html">Unión</a></li>
+        <li><a title="Podios" href="php/podios.php">Podios</a></li>
     </ul>
-    <button onclick="alert('Pulse en las tarjetas para darles la vuelta. Si las imágenes de dos cartas coinciden quedarán dadas la vuelta. Continue hasta que todas estén dadas la vuelta.')">Ayuda</button>
     <section>
         <h2>Juego de Memoria</h2>
+        <button onclick="alert('Pulse en las tarjetas para darles la vuelta. Si las imágenes de dos cartas coinciden quedarán dadas la vuelta. Continue hasta que todas estén dadas la vuelta.')">Ayuda</button>
         <script>
             var memoria=new Memoria();
         </script>
