--- a/juegos.html
+++ b/juegos.html
@@ -35,7 +35,8 @@
     <ul>
         <li><a title="Memoria" href="memoria.html">Memoria</a></li>
         <li><a title="Semáforo" href="semaforo.php">Semáforo</a></li>
-        <li><a title="Semáforo" href="libre.html">Libre</a></li>
+        <li><a title="Unión" href="union.html">Unión</a></li>
+        <li><a title="Podios" href="php/podios.php">Podios</a></li>
     </ul>
 </body>
 </html>
