--- a/circuito.html
+++ b/circuito.html
@@ -38,7 +38,7 @@
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Circuito </p>
     <h2>Circuito</h2>
     <p>
-        Archivo: <input type="file" id="archivoTexto" aria-label="Archivo" onchange="new Circuito().leerArchivoTexto(this.files)"/>
+       <label for="archivoTexto">Archivo: </label> <input type="file" id="archivoTexto" onchange="new Circuito().leerArchivoTexto(this.files)"/>
     </p>
     <p></p>
     <div id="mapa"></div>
