--- a/noticias.html
+++ b/noticias.html
@@ -37,19 +37,19 @@
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Noticias </p>
     <h2>Noticias</h2>
     <p>
-        <label for="archivoTexto">Archivo: </label><input  type="file" id="archivoTexto" onchange="new Noticias().readInputFile(this.files)"/>
+        <label >Archivo: <input  type="file"  onchange="new Noticias().readInputFile(this.files)"/></label>
 
     </p>
     <section><h3>Noticias</h3></section>
     <h3>Añadir Noticia</h3>
     <p>
-        <label for="titulo">Título:</label><input type="text" id="titulo" name="titulo" required/>
+        <label>Título: </label><input type="text"  name="titulo" required/>
     </p>
     <p>
-        <label for="autor">Autor:</label> <input type="text" id="autor" name="autor"  required/>
+        <label >Autor:</label> <input type="text"  name="autor"  required/>
     </p>
-    <label for="texto">Contenido:</label>
-    <textarea id="texto" rows="5" cols="40" ></textarea>
+    <label for="texto">Contenido:
+    <textarea rows="5" cols="40" ></textarea></label>
     <p><input type="submit" value="Añadir" onclick="new Noticias().addNews()" aria-label="Añadir noticia"></p>
 </body>
 </html>
