--- a/circuito.html
+++ b/circuito.html
@@ -38,7 +38,7 @@
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Circuito </p>
     <h2>Circuito</h2>
     <p>
-       <label>Archivo:  <input type="file"  onchange="new Circuito().leerArchivoTexto(this.files)"/></label>
+       Archivo:  <input type="file" aria-label="Archivo de texto" onchange="new Circuito().leerArchivoTexto(this.files)"/>
     </p>
     <p></p>
     <div id="mapa"></div>
