--- a/noticias.html
+++ b/noticias.html
@@ -37,19 +37,18 @@
     <p>Estás en <a title="Inicio" href="index.html">Inicio</a> | Noticias </p>
     <h2>Noticias</h2>
     <p>
-        <label >Archivo: <input  type="file"  onchange="new Noticias().readInputFile(this.files)"/></label>
+        Archivo: <input  type="file" aria-label="archivo de Texto" onchange="new Noticias().readInputFile(this.files)"/>
 
     </p>
     <section><h3>Noticias</h3></section>
     <h3>Añadir Noticia</h3>
     <p>
-        <label>Título: </label><input type="text"  name="titulo" required/>
+        <input type="text" id="titulo" aria-label="Título" name="titulo" required/>
     </p>
     <p>
-        <label >Autor:</label> <input type="text"  name="autor"  required/>
+         <input type="text" aria-label="Autor" name="autor"  required/>
     </p>
-    <label for="texto">Contenido:
-    <textarea rows="5" cols="40" ></textarea></label>
+    <textarea rows="5" cols="40" aria-label="Título"></textarea>
     <p><input type="submit" value="Añadir" onclick="new Noticias().addNews()" aria-label="Añadir noticia"></p>
 </body>
 </html>
